--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "core-js": "^3.6.4",
     "element-ui": "^2.13.0",
+    "sass": "^1.26.3",
+    "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
     "vuex": "^3.1.3"
   },
